--- a/index.html
+++ b/index.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Belal Said</title>
+<title>Belal M. K. Said</title>
+<link rel="stylesheet" type="text/css" href="core.css" media="screen" />
 </head>
 <body>
+<ul id="barmenu">
+  <li><a class="active" href="index.html">Home</a></li>
+  <li><a href="projects.html">Projects</a></li>
+  <li><a href="resume.pdf">Resume</a></li>
+</ul>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
 </body>
