--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 <ul id="barmenu">
   <li><a class="active" href="index.html">Home</a></li>
   <li><a href="projects.html">Projects</a></li>
-  <li><a href="resume.pdf">Resume</a></li>
+  <li><a href="resume.pdf" target="_blank">Resume</a></li>
 </ul>
+<hr/>
 </body>
 </html>
