Claire has great ideas!

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
 <title>Belal M. K. Said</title>
 <link rel="stylesheet" type="text/css" href="core.css" media="screen" />
+ <script src="jquery.js"></script>
+ <script src="core.js"></script>
 </head>
 <body>
 <ul id="barmenu">
@@ -11,5 +13,8 @@
   <li><a href="resume.pdf" target="_blank">Resume</a></li>
 </ul>
 <hr/>
+ <br/>
+  <h1 id="intro">Hi, I am Belal!</h1>
+  <img id="profile" src="profile.png"/>
 </body>
 </html>
