--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
  <br/>
   <h1 id="intro">Hi, I am Belal!</h1>
   <img id="profile" src="profile.png"/>
+  <h3 id="blurb">Engineer, Software Developer, Future Robot Overlord™</h3>
 </body>
 </html>
