--- a/index.html
+++ b/index.html
@@ -15,7 +15,15 @@
 <hr/>
  <br/>
   <h1 id="intro">Hi, I am Belal!</h1>
+  <br/>
   <img id="profile" src="profile.png"/>
   <h3 id="blurb">Mechanical Engineer, Software Developer, Future Robot Overlord™</h3>
+  <br/>
+  <div id="smedia">
+  <a href="mailto:belalmksaid@gmail.com"><img src="email.png"/></a>
+  	<a href="https://www.linkedin.com/in/belalmsaid"><img src="linkedin.png"/></a>
+  	<a href="https://www.facebook.com/belos.mostafa"><img src="facebook.png"/></a>
+  	<a href="https://github.com/belalmksaid"><img src="github.png"/></a>
+  </div>
 </body>
 </html>
