--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <h1 id="intro">Hi, I am Belal!</h1>
   <br/>
   <img id="profile" src="profile.png"/>
-  <h3 id="blurb">Mechanical Engineer, Software Developer, Future Robot Overlord™</h3>
+  <h3 id="blurb">Engineer, Software Developer, Future Robot Overlord™</h3>
   <br/>
   <div id="smedia">
   <a href="mailto:belalmksaid@gmail.com"><img src="email.png"/></a>
