--- a/projects.html
+++ b/projects.html
@@ -15,7 +15,7 @@
 <hr/>
  <br/>
  <div id="pcontainer">
-  <h2>Dynamics-Matlab Slot Car Simulation</h2>
+  <h2><a href="SlotCarSim/slotcar.html">Dynamics-Matlab Slot Car Simulation</a></h2>
   <br/>
 </div>
 </body>
