--- a/SlotCarSim/slotcar.html
+++ b/SlotCarSim/slotcar.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<script type="text/javascript" src="c:\users\belal\documents\github\disquemathjs\disquemath.js"></script>
+		<script type="text/javascript" src="disquemath.js"></script>
 		<script type="text/javascript" src="jquery.js"></script>
 		<script>
 		function renderCircle(c, p, r) {
