--- a/SlotCarSim/slotcar.html
+++ b/SlotCarSim/slotcar.html
@@ -49,6 +49,7 @@
   		track = cleanArray(track);
   		var x = new Array(), y = new Array(), temp;
   		n = track.length;
+  		console.log(n);
   		for(var i = 0; i < n; i++) {
   			temp = track[i].split(",");
   			x[i] = parseFloat(temp[0]);
