--- a/SlotCarSim/slotcar.html
+++ b/SlotCarSim/slotcar.html
@@ -72,7 +72,7 @@
 			cart.draw(c);
 
 			var t = 1;
-			setInterval(function() {
+			/*setInterval(function() {
 				c.clearRect(0, 0, board.width, board.height);
 				drawTrack(x, y, c);
 				var target = (v(x[t] * d + w / 2.0, y[t] * d + h / 2.0)).subt(cart.position);
@@ -90,7 +90,7 @@
 				}
 				if(t == (n - 1)) t = 0;
 				cart.draw(c);
-			}, 0)
+			}, 0);*/
 		</script>
 	</body>
 </html>
