--- a/SlotCarSim/slotcar.html
+++ b/SlotCarSim/slotcar.html
@@ -66,12 +66,15 @@
 			h = board.height;
 			d = 150.0;
 			var vel = 5;
-			drawTrack(x, y, c);
+			$(document).ready(function()) {
+				drawTrack(x, y, c);
 
 			var cart = new car(v(x[0] * d + w / 2.0, y[0] * d + h / 2.0));
 			cart.draw(c);
 
 			var t = 1;
+			});
+			
 			/*setInterval(function() {
 				c.clearRect(0, 0, board.width, board.height);
 				drawTrack(x, y, c);
