--- a/SlotCarSim/slotcar.html
+++ b/SlotCarSim/slotcar.html
@@ -66,7 +66,7 @@
 			h = board.height;
 			d = 150.0;
 			var vel = 5;
-			$(document).ready(function()) {
+			$(document).ready(function() {
 				drawTrack(x, y, c);
 
 			var cart = new car(v(x[0] * d + w / 2.0, y[0] * d + h / 2.0));
