project info entered

--- a/projects.html
+++ b/projects.html
@@ -17,6 +17,7 @@
  <div id="pcontainer">
   <h2><a href="SlotCarSim/slotcar.html">Dynamics-Matlab Slot Car Simulation</a></h2>
   <br/>
+  <h3>I built a simulation of a slot car moving in a track. The track path is made by a matlab function using cubic splint and paramtetic spline. The track physics is simulated in javascript for an interactive application.</h3>
 </div>
 </body>
 </html>
