--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <li><a href="projects.html">Projects</a></li>
   <li><a href="resume.html">Resume</a></li>
 </ul>
-<hr/>
+<div id="truebody">
  <br/>
   <h1 id="intro">Hi, I am Belal!</h1>
   <br/>
@@ -24,6 +24,7 @@
   	<a href="https://www.linkedin.com/in/belalmsaid"><img src="linkedin.png"/></a>
   	<a href="https://www.facebook.com/belos.mostafa"><img src="facebook.png"/></a>
   	<a href="https://github.com/belalmksaid"><img src="github.png"/></a>
+  </div>
   </div>
 </body>
 </html>
