--- a/resume.html
+++ b/resume.html
@@ -12,7 +12,8 @@
   <li><a href="projects.html">Projects</a></li>
   <li><a class="active" href="resume.html">Resume</a></li>
 </ul>
-<hr/>
+<div id="truebody">
  <embed src="resume.pdf" width="800px" height="1000px" style="display: block;margin-left:auto; margin-right: auto;"/>
+ </div>
 </body>
 </html>
