--- a/projects.html
+++ b/projects.html
@@ -12,12 +12,13 @@
   <li><a class="active" href="projects.html">Projects</a></li>
   <li><a href="resume.html">Resume</a></li>
 </ul>
-<hr/>
+<div id="truebody">
  <br/>
  <div id="pcontainer">
   <h2><a href="SlotCarSim/slotcar.html">Dynamics-Matlab Slot Car Simulation</a></h2>
   <br/>
   <h3>I built a simulation of a slot car moving in a track. The track path is made by a matlab function using cubic splint and paramtetic spline. The track physics is simulated in javascript for an interactive application.</h3>
+</div>
 </div>
 </body>
 </html>
