--- a/SlotCarSim/slotcar.html
+++ b/SlotCarSim/slotcar.html
@@ -98,7 +98,16 @@
 				var target = (v(x[t] * d + w / 2.0, y[t] * d + h / 2.0)).subt(cart.position);
 				target.normalize();
 				var tt = t == 0 ? n - 1 : t - 1;
+				var pos;
 				var alt = (v(x[t] * d + w / 2.0, y[t] * d + h / 2.0)).subt(v(x[tt] * d + w / 2.0, y[tt] * d + h / 2.0));
+				var radc = alt.clone().normalize();
+				var temp = radx.x;
+				radc.x = radc.y;
+				radc.y = -temp;
+				ctx.beginPath();
+				ctx.moveTo(0,0);
+				ctx.lineTo(300,150);
+				ctx.stroke();
 				var dot = (target.x * alt.x + target.y * alt.y) / (target.length() * alt.length());
 				var angle = Math.acos(dot) * 180 / (Math.PI);
 				if(angle >= 15 || isNaN(angle)) 
