--- a/SlotCarSim/slotcar.html
+++ b/SlotCarSim/slotcar.html
@@ -104,14 +104,14 @@
 				var target = (v(x[t] * d + w / 2.0, y[t] * d + h / 2.0)).subt(cart.position);
 				target.normalize();
 				var tt = t == 0 ? n - 1 : t - 1;
-				var pos;
+				//var pos;
 				var alt = (v(x[t] * d + w / 2.0, y[t] * d + h / 2.0)).subt(v(x[tt] * d + w / 2.0, y[tt] * d + h / 2.0));
-				var radc = alt.clone().normalize();
-				var temp = radc.x;
-				radc.x = radc.y;
-				radc.y = -temp;
-				var midpt = (v(x[t] * d + w / 2.0, y[t] * d + h / 2.0)).add(v(x[tt] * d + w / 2.0, y[tt] * d + h / 2.0)).scale(0.5);
-				var endpt = midpt.add(radc.scale(15));
+				//var radc = alt.clone().normalize();
+				//var temp = radc.x;
+				//radc.x = radc.y;
+				//radc.y = -temp;
+				//var midpt = (v(x[t] * d + w / 2.0, y[t] * d + h / 2.0)).add(v(x[tt] * d + w / 2.0, y[tt] * d + h / 2.0)).scale(0.5);
+				//var endpt = midpt.add(radc.scale(15));
 				/*c.beginPath();
 				c.moveTo(midpt.x,midpt.y);
 				c.lineTo(endpt.x,endpt.y);
