--- a/SlotCarSim/slotcar.html
+++ b/SlotCarSim/slotcar.html
@@ -43,6 +43,7 @@
 			}
 			this.draw = function(c) {
 				//renderCircle(c, this.position, 5);
+				console.log(this.position);
 				renderRectangle(c, this.position, 20, 12, this.angle);
 			}
 		}
