--- a/SlotCarSim/slotcar.html
+++ b/SlotCarSim/slotcar.html
@@ -96,6 +96,8 @@
 				drawTrack(x, y, c);
 
 			var cart = new car(v(x[0] * d + w / 2.0, y[0] * d + h / 2.0));
+			console.log(v(x[0] * d + w / 2.0, y[0] * d + h / 2.0));
+			console.log("WHAAA");
 			cart.draw(c);
 
 			var t = 1;
