--- a/SlotCarSim/slotcar.html
+++ b/SlotCarSim/slotcar.html
@@ -97,7 +97,7 @@
 
 			var cart = new car(v(x[0] * d + w / 2.0, y[0] * d + h / 2.0));
 			console.log(v(x[0] * d + w / 2.0, y[0] * d + h / 2.0));
-			console.log("WHAAA");
+			console.log(x[0]);
 			cart.draw(c);
 
 			var t = 1;
