--- a/SlotCarSim/slotcar.html
+++ b/SlotCarSim/slotcar.html
@@ -93,7 +93,7 @@
 			h = board.height;
 			d = 150.0;
 			var vel = 2;
-			while(!loaded) {console.log("Not loaded.")};
+			while(!loaded) {};
 			$(document).ready(function() {
 				drawTrack(x, y, c);
 				var cart = new car(v(x[0] * d + w / 2.0, y[0] * d + h / 2.0));
