--- a/SlotCarSim/slotcar.html
+++ b/SlotCarSim/slotcar.html
@@ -108,16 +108,16 @@
 				var tt = t == 0 ? n - 1 : t - 1;
 				//var pos;
 				var alt = (v(x[t] * d + w / 2.0, y[t] * d + h / 2.0)).subt(v(x[tt] * d + w / 2.0, y[tt] * d + h / 2.0));
-				//var radc = alt.clone().normalize();
-				//var temp = radc.x;
-				//radc.x = radc.y;
-				//radc.y = -temp;
-				//var midpt = (v(x[t] * d + w / 2.0, y[t] * d + h / 2.0)).add(v(x[tt] * d + w / 2.0, y[tt] * d + h / 2.0)).scale(0.5);
-				//var endpt = midpt.add(radc.scale(15));
-				/*c.beginPath();
+				var radc = alt.clone().normalize();
+				var temp = radc.x;
+				radc.x = radc.y;
+				radc.y = -temp;
+				var midpt = (v(x[t] * d + w / 2.0, y[t] * d + h / 2.0)).add(v(x[tt] * d + w / 2.0, y[tt] * d + h / 2.0)).scale(0.5);
+				var endpt = midpt.add(radc.scale(15));
+				c.beginPath();
 				c.moveTo(midpt.x,midpt.y);
 				c.lineTo(endpt.x,endpt.y);
-				c.stroke();*/
+				c.stroke();
 				var dot = (target.x * alt.x + target.y * alt.y) / (target.length() * alt.length());
 				var angle = Math.acos(dot) * 180 / (Math.PI);
 				if(angle >= 15 || isNaN(angle)) 
