--- a/SlotCarSim/slotcar.html
+++ b/SlotCarSim/slotcar.html
@@ -116,11 +116,19 @@
 				radc.y = -temp;
 				var midpt = (v(x[t] * d + w / 2.0, y[t] * d + h / 2.0)).add(v(x[tt] * d + w / 2.0, y[tt] * d + h / 2.0)).scale(0.5);
 				var endpt = midpt.add(radc.scale(60));
+				var norm = midpt.add(radc.scale(-30));
 				c.save();
 				c.beginPath();
 				c.setLineDash([1, 2]);
 				c.moveTo(midpt.x,midpt.y);
 				c.lineTo(endpt.x,endpt.y);
+				c.stroke();
+				c.restore();
+				c.save();
+				c.beginPath();
+    			c.strokeStyle = '#0000FF';
+				c.moveTo(midpt.x,midpt.y);
+				c.lineTo(norm.x,norm.y);
 				c.stroke();
 				c.restore();
 				var dot = (target.x * alt.x + target.y * alt.y) / (target.length() * alt.length());
