--- a/SlotCarSim/slotcar.html
+++ b/SlotCarSim/slotcar.html
@@ -115,7 +115,7 @@
 				var tp1 = v(x[tk1] * d + w / 2.0, y[tk1] * d + h / 2.0);
 				var s1 = (tpoint.y - tm1.y) / (tpoint.x - tm1.x);
 				var s2 = (tp1.y - tpoint.y) / (tp1.x - tpoint.x);
-				var ss = (s2 - s2) / ((p1.x - tm1.x) / 2.0);
+				var ss = (s2 - s2) / ((tp1.x - tm1.x) / 2.0);
 				var alt = (tpoint).subt(tm1);
 				var radc = alt.clone().normalize();
 				var temp = radc.x;
