--- a/SlotCarSim/slotcar.html
+++ b/SlotCarSim/slotcar.html
@@ -97,8 +97,6 @@
   		$(document).ready(function() {
 				drawTrack(x, y, c);
 				var cart = new car(v(x[0] * d + w / 2.0, y[0] * d + h / 2.0));
-				console.log(v(x[0] * d + w / 2.0, y[0] * d + h / 2.0));
-				console.log(x);
 				cart.draw(c);
 				var t = 1;
 				setInterval(function() {
@@ -115,6 +113,7 @@
 				var s1 = (tpoint.y - tm1.y) / (tpoint.x - tm1.x);
 				var s2 = (tp1.y - tpoint.y) / (tp1.x - tpoint.x);
 				var ss = (s2 - s2) / ((tp1.x - tm1.x) / 2.0);
+				console.log(ss);
 				var alt = (tpoint).subt(tm1);
 				var radc = alt.clone().normalize();
 				var temp = radc.x;
