--- a/SlotCarSim/slotcar.html
+++ b/SlotCarSim/slotcar.html
@@ -113,7 +113,7 @@
 				var s1 = (tpoint.y - tm1.y) / (tpoint.x - tm1.x);
 				var s2 = (tp1.y - tpoint.y) / (tp1.x - tpoint.x);
 				var ss = (s2 - s2) / ((tp1.x - tm1.x) / 2.0);
-				console.log(ss);
+				console.log(s1 + ", " s1);
 				var alt = (tpoint).subt(tm1);
 				var radc = alt.clone().normalize();
 				var temp = radc.x;
