--- a/SlotCarSim/slotcar.html
+++ b/SlotCarSim/slotcar.html
@@ -118,15 +118,16 @@
 				var ss = (s2 - s1) / ((tp1.x - tm1.x) / 2.0);
 				//var s1 = v((tpoint.x - tm1.x), (tpoint.y - tm1.y));
 				//var s2 = v((tp1.x - tpoint.x), (tp1.y - tpoint.y));
-				console.log(ss);
+				var radiusCurv = Math.abs(Math.pow(1 + Math.pow((s1 + s2) / 2.0, 2), (3/2)) / ss);
+				console.log(radiusCurv);
 				var alt = (tpoint).subt(tm1);
 				var radc = alt.clone().normalize();
 				var temp = radc.x;
 				radc.x = radc.y;
 				radc.y = -temp;
 				var midpt = (tpoint).add(tm1).scale(0.5);
-				var endpt = midpt.add(radc.scale(60 * sign(ss) * sign(y[t])));
-				var norm = midpt.add(radc.scale(-30));
+				var endpt = midpt.add(radc.scale(60 * sign(ss) * sign(-1 * y[t])));
+				var norm = midpt.add(radc.scale(30 * sign(ss) * sign(y[t])));
 				c.save();
 				c.beginPath();
 				c.setLineDash([1, 2]);
