--- a/SlotCarSim/slotcar.html
+++ b/SlotCarSim/slotcar.html
@@ -125,7 +125,7 @@
 				var temp = radc.x;
 				radc.x = radc.y;
 				radc.y = -temp;
-				var midpt = (tpoint).add(tm1).scale(0.5);
+				var midpt = (cart.position).add(tm1).scale(0.5);
 				var endpt = midpt.add(radc.scale(Math.abs(radiusCurv * sign(radiusCurv)) * sign(ss) * sign(-1 * y[t])));
 				var norm = midpt.add(radc.scale(30 * sign(ss) * sign(y[t])));
 				c.save();
