--- a/SlotCarSim/slotcar.html
+++ b/SlotCarSim/slotcar.html
@@ -1,5 +1,6 @@
 <html>
 	<head>
+		<style type="text/css" href="/core.css"></style>
 		<script type="text/javascript" src="disquemath.js"></script>
 		<script type="text/javascript" src="jquery.js"></script>
 		<script>
@@ -75,7 +76,7 @@
 		function drawLegend(c) {
 			c.font = "15px Calibri"
   			c.save();
-    		c.rect(20, 500, 160, 100);
+    		c.rect(20, 499, 160, 100);
     		c.lineWidth = 2;
     		c.strokeStyle = '#000000';
     		c.stroke();
@@ -119,8 +120,17 @@
 		</script>
 	</head>
 	<body>
-		<canvas id="board" height="600" width="800"></canvas>
-		<input type="range" id="t_position" value="0" style="width: 800" />
+	<table>
+		<tr>
+			<td><canvas id="board" height="600" width="800"></canvas></td>
+			<td>
+			<div style="height: 600px; width: 200px;">
+			<p>Velocity:</p>	
+			</div></td>
+		</tr>
+	</table>
+		
+		<input type="range" id="t_position" value="0" style="width: 800px; clear: left; " />
 		<script type="text/javascript">
 			c = board.getContext('2d');
 			w = board.width;
@@ -200,10 +210,7 @@
 				cart.draw(c);
 			}, 0);
 			});
-  		});
-			
-			
-			
+  		});			
 		</script>
 	</body>
 </html>
