--- a/projects.html
+++ b/projects.html
@@ -16,7 +16,13 @@
  <div id="pcontainer">
   <h2><a href="SlotCarSim/slotcar.html?t=track.txt" target="_blank">Dynamics-Matlab Slot Car Simulation</a></h2>
   <br/>
+  <div id="projectdisplay">
+  <img></img>
+  </div>
+  <br/>
   <h3>I built a simulation of a slot car moving in a track. The track path is made by a matlab function using cubic splint and paramtetic spline. The track physics is simulated in javascript for an interactive application.</h3>
+  <br/>
+  <hr/>
 </div>
 </div>
 </body>
