--- a/projects.html
+++ b/projects.html
@@ -17,7 +17,9 @@
   <h2><a href="SlotCarSim/slotcar.html?t=track.txt" target="_blank">Dynamics-Matlab Slot Car Simulation</a></h2>
   <br/>
   <div id="projectdisplay">
-  <img></img>
+  <img src="projects/img1.png"></img>
+  <img src="projects/img2.png"></img>
+  <img src="projects/img3.png"></img>
   </div>
   <br/>
   <h3>I built a simulation of a slot car moving in a track. The track path is made by a matlab function using cubic splint and paramtetic spline. The track physics is simulated in javascript for an interactive application.</h3>
