--- a/index.html
+++ b/index.html
@@ -14,17 +14,31 @@
 </ul>
 <div id="truebody">
  <br/>
-  <h1 id="intro">Hi, I am Belal!</h1>
+<table style="margin-left: auto; margin-right: auto; vertical-align: top;"><tr>
+  <td  style="vertical-align: top;">
+     <h1 id="intro">Belal M. K. Said</h1>
   <br/>
   <img id="profile" src="profile.png"/>
-  <h3 id="blurb">Engineer, Software Developer, Future Robot Overlord™</h3>
+  <h3 id="blurb">Engineer, Software Developer, <br/> Future Robot Overlord™</h3>
   <br/>
   <div id="smedia">
   <a href="mailto:belalmksaid@gmail.com"><img src="email.png"/></a>
-  	<a href="https://www.linkedin.com/in/belalmsaid"><img src="linkedin.png"/></a>
-  	<a href="https://www.facebook.com/belos.mostafa"><img src="facebook.png"/></a>
-  	<a href="https://github.com/belalmksaid"><img src="github.png"/></a>
+    <a href="https://www.linkedin.com/in/belalmsaid"><img src="linkedin.png"/></a>
+    <a href="https://www.facebook.com/belos.mostafa"><img src="facebook.png"/></a>
+    <a href="https://github.com/belalmksaid"><img src="github.png"/></a>
   </div>
+  </td>
+  <td style="vertical-align: top;">
+    <div id="bio"><p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Hi, my name is Belal Said.
+I'm currently a 20 year old student at Rutgers University-New Brunswick, pursuing a B.E. in <b>Mechanical Engineering</b> and a B.A. in <b>Computer Science</b>. I've had a passion for computer science and machines for as long as I remember, and I have had experience the field for approximately 6 years.
+<br/>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I have specialized skills in <b>algorithm design</b>, <b>data extraction and analysis</b>, and <b>scientific programming</b>. Other skills include back-end server developement, hardware hacking, and 3D design. I've also been fortunate enough to put those skills to use in jobs and internships with numerous laboratories and established businesses.
+</p>
+</div>
+  </td>
+</tr></table>
+
+ 
   </div>
 </body>
 </html>
