--- a/projects.html
+++ b/projects.html
@@ -10,7 +10,7 @@
 <ul id="barmenu">
   <li><a href="index.html">Home</a></li>
   <li><a class="active" href="projects.html">Projects</a></li>
-  <li><a href="resume.html">Resume</a></li>
+  <li><a href="resume.pdf" target="_blank">Resume</a></li>
 </ul>
 <div id="truebody">
  <div id="pcontainer">
