--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <ul id="barmenu">
   <li><a class="active" href="index.html">Home</a></li>
   <li><a href="projects.html">Projects</a></li>
-  <li><a href="resume.pdf" target="_blank">Resume</a></li>
+  <li><a href="BelalSaidResume.pdf" target="_blank">Resume</a></li>
 </ul>
 <div id="truebody">
  <br/>
