--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   </td>
   <td style="vertical-align: top;">
     <div id="bio"><p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Hi, my name is Belal Said.
-I'm currently a 20 year old student at Rutgers University-New Brunswick, pursuing a B.E. in <b>Mechanical Engineering</b> and a B.A. in <b>Computer Science</b>. I've had a passion for computer science and machines for as long as I remember, and I have had experience the field for approximately 6 years.
+I'm currently a 20 year old student at Rutgers University-New Brunswick, pursuing a B.E. in <b>Mechanical Engineering</b> and a B.A. in <b>Computer Science</b>. I've had a passion for computer science and machines for as long as I remember, and I have had experience in the field for approximately 6 years.
 <br/>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I have specialized skills in <b>algorithm design</b>, <b>data extraction and analysis</b>, and <b>scientific programming</b>. Other skills include back-end server developement, hardware hacking, and 3D design. I've also been fortunate enough to put those skills to use in jobs and internships with numerous laboratories and established businesses.
 </p>
