--- a/projects.html
+++ b/projects.html
@@ -25,6 +25,17 @@
   <h3>I built a simulation of a slot car moving in a track. The track path is made by a matlab function using cubic splint and paramtetic spline. The track physics is simulated in javascript for an interactive application.</h3>
   <br/>
   <hr/>
+  <h2><a href="scrapmusicbox/scrapmusicbox.html">Scrap Music Box</a></h2>
+  <br/>
+  <div id="projectdisplay">
+  <img src="scrapmusicbox/img1.png"></img>
+  <img src="scrapmusicbox/img2.png"></img>
+  <img src="scrapmusicbox/img3.png"></img>
+  </div>
+  <br/>
+  <h3>I built a music box from scrap wood and rubberbands, inspired by the inventor <a href="https://www.google.com/patents/US4458573">Akihiko Isaka's governor</a>. The rubber bands are attached to a governor that controls that speed of the music box using air resistance. The cylinder was built by cutting mahogany using a circular saw and gluing them to form a 2" long cylinder. The notes are built from a rake's teeth that I cut off and filed down to their specific notes.</h3>
+  <br/>
+  <hr/>
 </div>
 </div>
 </body>
