--- a/projects.html
+++ b/projects.html
@@ -36,6 +36,18 @@
   <h3>I built a music box from scrap wood and rubberbands, inspired by the inventor <a href="https://www.google.com/patents/US4458573">Akihiko Isaka's governor</a>. The rubber bands are attached to a governor that controls that speed of the music box using air resistance. The cylinder was built by cutting mahogany using a circular saw and gluing them to form a 2" long cylinder. The notes are built from a rake's teeth that I cut off and filed down to their specific notes.</h3>
   <br/>
   <hr/>
+  <h2><a href="https://github.com/belalmksaid/Disque-Raytracer" target="_blank">C# Raytracer</a></h2>
+  <br/>
+  <div id="projectdisplay">
+  <img src="raytracer/img1.png"></img>
+  <img src="raytracer/img2.png"></img>
+  <img src="raytracer/img3.png"></img>
+  </div>
+  <br/>
+  <h3>Built a raytracer from scratch based on the book <i>Physically Based Rendering</i> by Matt Pharr. The code was built on abstract classes to allow high customizability and uses a custom built Math library. I started the project to test new raytracing technique such photon mapping and multithreading techniques invloving CPU and GPU.
+</h3>
+  <br/>
+  <hr/>
 </div>
 </div>
 </body>
