update new track

--- a/projects.html
+++ b/projects.html
@@ -14,7 +14,7 @@
 </ul>
 <div id="truebody">
  <div id="pcontainer">
-  <h2><a href="SlotCarSim/slotcar.html?t=track.txt" target="_blank">Dynamics-Matlab Slot Car Simulation</a></h2>
+  <h2><a href="SlotCarSim/slotcar.html?t=track4.txt" target="_blank">Dynamics-Matlab Slot Car Simulation</a></h2>
   <br/>
   <div id="projectdisplay">
   <img src="projects/img1.png"></img>
