--- a/SlotCarSim/slotcar.html
+++ b/SlotCarSim/slotcar.html
@@ -57,7 +57,7 @@
 			}
 			this.draw = function(c) {
 				//renderCircle(c, this.position, 5);
-				renderRectangle(c, this.position, 20, 12, this.angle);
+				renderRectangle(c, this.position, 3 * 150 / 33.7493, 1.25 * 150 / 33.7493, this.angle);
 			}
 		}
 		function drawTrack(x, y, c) {
