--- a/SlotCarSim/slotcar.html
+++ b/SlotCarSim/slotcar.html
@@ -158,7 +158,7 @@
 			w = board.width;
 			h = board.height;
 			d = 150.0;
-			mass = 1;
+			mass = 0.019;
 			drawLegend(c);
 			var vel = 130.4;
 			$.get(file, function(data) {
@@ -201,7 +201,7 @@
 				radc.y = -temp;
 				var midpt = (cart.position).add(tm1).scale(0.5);
 				var endpt = midpt.add(radc.scale(Math.abs(radiusCurv * sign(radiusCurv)) * sign(ss) * sign(-1 * y[t])));
-				var norm = midpt.add(radc.scale(1000 * Math.pow(vel / 100, 2) / radiusCurv * sign(ss) * sign(y[t])));
+				var norm = midpt.add(radc.scale(0.019 * 3000 * Math.pow(vel / 100, 2) / radiusCurv * sign(ss) * sign(y[t])));
 				if(showradius.checked) {
 					c.save();
 					c.beginPath();
