--- a/projects.html
+++ b/projects.html
@@ -18,7 +18,7 @@
   <br/>
   <div id="projectdisplay">
   <img src="projects/gofimg1.png"></img>
-  <img src="projects/gofimg2.png"></img>
+  <img src="projects/gofimg2c.png"></img>
   <img src="projects/gofimg3.png"></img>
   </div>
   <br/>
