--- a/projects.html
+++ b/projects.html
@@ -22,7 +22,7 @@
   <img src="projects/gofimg3.png"></img>
   </div>
   <br/>
-  <h3>This is a simple AI project with hunter particles attempting to eat food particles and food particles escaping. The AI controls the speed and orientation of the predator particles but excessive speed comes with the price of reduced fitness from wasted energy. The AI is optimized using a simple genetic algorithm in which unfit hunters are discarded and replaced with children of fit ones. The particles start exhibiting interesting behavior around the 30th generation.
+  <h3>This is a simple AI project with hunter particles attempting to eat food particles and food particles escaping. The AI controls the speed and orientation of the predator particles but excessive speed comes with the price of reduced fitness from wasted energy. The AI is optimized using a simple genetic algorithm in which unfit hunters are discarded and replaced with the children of fit ones. The particles start exhibiting interesting behavior around the 30th generation.
 </h3>
   <br/>
   <hr/>
