--- a/projects.html
+++ b/projects.html
@@ -14,7 +14,7 @@
 </ul>
 <div id="truebody">
  <div id="pcontainer">
- <h2><a href="gameoflife/gof.html" target="_blank">Game Of Life: Predator Prey</a></h2>
+ <h2><a href="gameoflife/gof.html" target="_blank">Game Of Life: Predator/Prey</a></h2>
   <br/>
   <div id="projectdisplay">
   <img src="projects/gofimg1.png"></img>
